[package]
name = "superdev_test"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP Server
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Solana SDK
solana-sdk = "1.17"
solana-client = "1.17"
spl-token = "4.0"
spl-associated-token-account = "2.2"

# Cryptography
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"

# Error handling
thiserror = "1.0"

# Encoding
base64 = "0.21"
bs58 = "0.5"

# HTTP and Hyper dependencies
http = "0.2"
hyper = { version = "0.14", features = ["full"] }

[[bin]]
name = "server"
path = "src/main.rs"